--- a/src/styles/_common.scss
+++ b/src/styles/_common.scss
@@ -31,6 +31,7 @@ a {
     }
 }
 
+
 .card-container {
     background-color: $white;
     padding: 40px 0;
@@ -181,6 +182,12 @@ a {
     .settings {
         display: none;
     }
+}
+
+.login-btn{
+    width: 200px;
+    height: 60px;
+    background-color: $btn-info !important;
 }
 
 @media (min-width: 480px) {
